# wb-scraper

./: CHANGELOG.md  LICENSE  README.md  categories.json  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml
services/parser/: Dockerfile  pyproject.toml
services/parser/parser/: __init__.py  config.py  main.py  models.py  product_parser.py
services/worker/: Dockerfile  pyproject.toml
services/worker/worker/: __init__.py  config.py  exceptions.py  main.py
services/worker/worker/api/: __init__.py  router.py  schemas.py
services/worker/worker/clients/: __init__.py  base.py  categories.py  products.py
services/worker/worker/services/: __init__.py  job_store.py  scrape_service.py
shared/: pyproject.toml
shared/shared/: __init__.py  config.py
shared/shared/kafka/: __init__.py  consumer.py  producer.py
shared/shared/models/: __init__.py  job.py
