[project]
name = "shared"
version = "0.1.0"
description = "Shared models, Kafka client, and configuration for wb-scraper"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "confluent-kafka>=2.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
