[project]
name = "parser"
version = "0.1.0"
description = "Kafka consumer parser service"
requires-python = ">=3.14"
dependencies = [
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parser"]

[tool.uv.sources]
shared = { workspace = true }
