[project]
name = "worker"
version = "0.1.0"
description = "REST API worker service for scraping Wildberries categories"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.34.0",
    "curl-cffi>=0.14.0",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.uv.sources]
shared = { workspace = true }
